--- a/pages/p4/960879.md
+++ b/pages/p4/960879.md
@@ -1,4 +1,4 @@
-### 黎智英撑住 苹果日报撑住 香港人撑住(图)
+### 【百年百首咏史】七十三：西单民主墙(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="前香港众志三子(黄之锋、周庭、林朗彦)西九裁判法院上庭" src="https://img3.secretchina.com/pic/2020/12-2/p2830852a700655995-ss.jpg" style="height:400px; width:600px"/>
+  <img alt="北京 西单民主墙 邓小平 魏京生" src="https://img2.secretchina.com/pic/2018/12-13/p2321962a880448862-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   前香港众志三子(黄之锋、周庭、林朗彦)被囚（图片来源：看中国 李明）
+   夕阳下的北京（图片来源：ED JONES/AFP/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,56 +29,119 @@
   </div>
  </div>
  <p>
-  【看中国2020年12月4日讯】黄之锋、周庭和林朗彦刚刚被囚，又传来
+  【看中国2021年1月31日讯】
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/黎智英" target="_blank">
-    黎智英
+   西单民主墙
+  </strong>
+  主要指的是1970年代
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/北京" target="_blank">
+    北京
    </span>
   </strong>
-  被扣押四个月的消息。
+  西长安街和西单北大街交会处，西单体育场的约2米高、100米长（也有一说是200米左右）的宽阔围墙，上面张贴着许多不同政见的大字报。西单民主墙被视为中国民主运动的开端，其发挥宣传政治自由与民主化的短暂自由时期被称为“北京之春”。
   <strong>
-   中共
+   魏京生
   </strong>
-  港共为清算
-  <strong>
-   香港
-  </strong>
-  人的抗争，已经丧心病狂，没有底线了。
+  、徐文立、王军涛、胡平、刘青、任畹町等。其中大部分人被判刑或流亡海外，有的还在后来的八九运动、组党运动中再次被判重刑。留在国内的徐文立、秦永敏、牟传珩等人皆身陷牢狱。1979年3月29日，中共中央转发了公安部党组的请示报告，确认全国八十七个自发组织中，有七个组织“都是有极少数坏人控制、把持的”。这七个组织是北京的“探索”（魏京生）、“中国人权同盟”（任畹町）、“兴中会”，上海的“社会主义民主促进会”、“上海民主讨论会”（乔忠令）、“振兴社”（傅申奇）和贵州的“解冻社”（李家华）。有重要影响的组织如“北京之春”（胡平）并未列入其中。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
+ <p style="text-align: center;">
+  十载坚冰酥欲消(2)
+ </p>
+ <p style="text-align: center;">
+  漏船解缆路迢遥(3)
+ </p>
+ <p style="text-align: center;">
+  匹夫忧国剖肝胆
+ </p>
+ <p style="text-align: center;">
+  当政自矜骄舜尧
+ </p>
+ <p style="text-align: center;">
+  东厂赭衣常满满(4)
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  西单赤子各哓哓
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  独裁民主皆由我
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  摸遍石头佯过桥(5)
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  以黎智英被控的案，根本不属于国安法管辖范围，完全是
-  <span href="https://www.secretchina.com/news/gb/tag/香港" target="_blank">
-   香港
+  注(1)指十年文革。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  注(2)1978年3月18日，
+  <span href="https://zh.wikipedia.org/zh-tw/%E9%82%93%E5%B0%8F%E5%B9%B3" target="_blank">
+   邓小平
   </span>
-  本地行政上是否违规的问题，居然由政府派遣的法官依国安法审讯，分明就是要避开香港普通法的法律程序，用大陆那一套无法无天的苛政来对付黎智英。对付黎智英的目的，就是打压
-  <strong>
-   苹果日报
-  </strong>
-  ，打压苹果的目的，就是禁绝香港人反抗的声音。
- </p>
- <p>
-  黎智英先生是成功生意人，以匹夫之勇闯荡传媒，打出一片生天。依一般人的人生哲学，早已可与家人悠游人生，享受天伦之乐。可是黎智英铁肩担道义，辣手着文章，多年不畏不惧，带领
-  <span href="https://www.secretchina.com/news/gb/tag/苹果日报" target="_blank">
-   苹果日报
-  </span>
-  守住香港价值的最后一道防线。
- </p>
- <p>
-  在最困难的时候，他没有退缩，没有躲赖，反而身先士卒，走在最前线，凡有抗争，总有他的身影。分明可以离港避秦，他却选择留下直面专政暴力，他的人格和勇气担当，都令我五体投地。我一生憎恶共产党，也想尽一己之力保护香港，但我自问缺乏黎智英那样的坚毅和勇敢，今日听到这个坏消息，虽然也早有心理准备，但仍感觉锥心之痛。
- </p>
- <p>
-  昨日文章贴出后，有网友在留言中说，他到苹果日报退订，是因为苹果登了政府的明日大屿广告，也有人说因为苹果挺拜登。我只想问这些朋友，论对抗
-  <span href="https://www.secretchina.com/news/gb/tag/中共" target="_blank">
-   中共
-  </span>
-  的决心，你有黎智英的坚定吗?你能像他那样承担中共加诸自己和家人身上的痛苦？你能像他那样坚持了那么多年从不退缩吗?
- </p>
- <p>
-  如果你能，你就有权批评他，但能不能不是说出来的，是做出来的。
+  也在全国科学大会开幕词中提到了“崩溃的边缘”。他说：“‘四人帮’胡说什么‘四个现代化实现之日，就是资本主义复辟之时’。疯狂进行破坏，使我国国民经济一度濒于崩溃的边缘，科学技术与世界先进水平的差距愈拉愈大。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,82 +156,7 @@
   </div>
  </center>
  <p>
-  中共为剿灭香港人的抗争，已经无所不用其极，日后的打压一定不会停止，直至他自己垮台为止，对此，香港人应该有充份的思想准备。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  首先对黄之锋和黎智英下手，是因为中共视他们为眼中钉，他们一定要先拿下这几个代表性人物，才可以着手清理更多不服管制的普通市民。今后一段时间内，相信会有更多泛民代表和勇武派被秋后算帐，香港很快要加建监狱，甚至新疆式的劳改营了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  面对这样严峻的形势，我仍旧要说几句可能年轻人不中听的话。我的意思是，所有冒了风险准备在香港坚持下去，甚至不惜牢狱之灾的战友，都请认真考虑一下自己的处境，不要对中共有一念之仁的幻想。用香港人的话来说，中共唔系人咁品，中共的残暴无人性不是我们可以想像的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  我主张有条件离开的，应该先选择离开，避免牢狱之灾，到了外面仍可为香港出力。往前看，香港本土的抗争，在一段时间内将难以复苏，反而在西方民主国家，如有更多人为香港出声，对各国政要和人民宣讲香港的处境，揭露中共的丑恶面目，那对扭转各国的抗共立场会有直接帮助。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  须知单单依靠香港人微薄的力量，是无法抗衡中共的国家机器的，只有尽可能影响各国朝野，以普世价值呼唤全世界的声援和支持，让更多国家采取更严厉的措施围堵中共，才能推动中共瓦解的进程。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  到了外面不是逃难，而是转进另一个战场。香港虽可能被全面销声，但在可见的时间内，中共还不至于禁绝facebook、youture这些互联网平台，香港人仍可以借助这些平台继续发声影响世界。
+  注(3)东厂，其全名为东缉事厂，厂卫之一。中国明朝时期的由宦官执掌的特权监察、情治机构。东厂对官吏、士大夫甚至于一般庶民制造了大量冤案，在当时颇受士人反感。执行公务时，与锦衣卫相同，持有“驾帖”以证明代天子行事，并且由刑科给事中的“佥签”。厂卫的主要侦查以反叛乱、捉拿异议份子为主，与其他两厂（西厂、内行厂）一卫（锦衣卫）合称“厂卫”，是明朝“特务治国”的象征。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,7 +175,7 @@
   </ins>
  </center>
  <p>
-  这半年来，罗冠聪等香港年轻人在外面做了很多事，他们的一举一动都受到世界关注，也发挥了实际的影响。如果有更多香港年轻人离开香港，散居世界各国，在那里重拾香港人的抗争精神，那无疑是对本土抗争最有效的协同作战。
+  赭衣，古代囚犯身着红色衣服以便甄别，后世用以称犯人。那时的年轻人进拘留所好像很平常，我有好几个朋友都曾在那里过夜，我实在太安份守己了，没有享受过这种待遇，现在想起来有点遗憾。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -202,56 +190,63 @@
   </div>
  </center>
  <p>
-  勉强留在这里，只是方便中共施毒手而已。黎智英因为有苹果在，舍不得放下同事，所以要留守到最后，但一般市民尤其是年轻人，不必用同样的牺牲去换取未必能到手的成果。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  我的意思是，没有人有权去指责那些选择离开的人，离开是为了回来，退却是为了进攻。年轻人到了外国，除了继续文宣工作之外，也可以争取深造机会，提高理论水平，磨练工作能力，一旦机会来临，所有的游子都集结归来，那时重起高潮，迎接黎明。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  黎智英在英美各国有崇高声望，他的被捕一定会引起广泛的强烈反响，且看中共港共如何承受这笔孽债的后果。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  （文章由作者授权转载自
-  <span href="https://www.facebook.com/nganshunkau" target="_blank">
-   颜纯钩facebook脸书专页
+  注(4)1980年12月16日，中国共产党中央委员会副主席陈云在中央工作会议上讲话，题为《经济形势与经验教训》一文，指中国要改革，因中国改革问题复杂，必须要保持稳定，要摸着石头过河，不能过急。另一位副主席
+  <span href="https://www.secretchina.com/news/gb/tag/邓小平" target="_blank">
+   邓小平
   </span>
-  ）
+  亦完全赞同陈云的见解，所以被误以为摸着石头过河理论是邓小平提出。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  明明有路有桥，却偏偏要下河去摸石头，时至今日，先锋队员们皆忙着一手摸钱，一手摸奶，那里还能腾出手去摸石头？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <span href="https://zh.wikipedia.org/zh-tw/%E9%AD%8F%E4%BA%AC%E7%94%9F" target="_blank">
+   魏京生
+  </span>
+  在民主墙上贴出“要民主还是要新的独裁？”，“论第五个现代化”等文章，在当时真是振聋发聩，如醍醐灌顶。他清醒地看到邓小平的独裁本质，并大胆地指出中国还需要第五个现代化，即民主化。如果没有实现多党制，没有有效的权力制衡，没有言论集会自由，没有司法独立等等实质性的现代化做基础，那四个现代化只是建筑沙滩上的高楼，中看不中用，迟早会轰然垮掉，多年来诸多的事实证明，叫他不幸言中了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  我很佩服
+  <span href="https://www.secretchina.com/news/gb/tag/魏京生" target="_blank">
+   魏京生
+  </span>
+  过人的胆识，他没被杀头真是侥幸。邓小平失去了一个千载难逢的大好机会，他本可以成为中国的华盛顿，去开创中华民族的新篇章，成为流芳百世的伟大人物，但他却毫不利己，专门利人地把机会送给蒋经国先生，看来他是学雷锋学坏了脑子了。在经历了十年浩劫之后，人心思变，那些被解放的老干部中，许多在参加共产党干革命之时，都是真心要建立一个自由民主的新中国的，痛定思痛，邓应该不难获得他们的理解和支持，只要把延安时期新华日报那些文章拿出来翻炒一遍，顺应民心，顺应潮流，转型应该如顺水推舟，没有什么太大的难度，真是为他惋惜。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -266,6 +261,32 @@
   </div>
  </center>
  (文章仅代表作者个人立场和观点)
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  来源:
+  <span href="/news/gb/tag/看中国  ">
+   看中国
+  </span>
+ </p>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41y3"/>
+  版权所有，任何形式转载需看中国授权许可。
+  <span style="color:red">
+   严禁建立镜像网站.
+  </span>
+ </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -287,42 +308,30 @@
     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954653.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954653.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/954653.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/954653.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/960879.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/960879.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/960879.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/31/960879.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/954653.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p4/960879.md' width='0px' height='0px'/>
