--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -118242,4 +118242,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=02012101)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=02012151)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
